--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.16.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
-    "react-native-axios": "^0.17.1"
+    "react-native-axios": "^0.17.1",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
